# HHP-Lab

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.arch/: arch.annotations.jsonl  arch.enriched.jsonl  arch.registry.jsonl  arch.scaffold.jsonl
.beads/: .gitignore  README.md  config.yaml  issues.jsonl  issues.jsonl.bak
HHP-Lab-manual/: 01-Overview.md  02-Installation.md  03-Architecture.md  04-CLI-Reference.md  05-Recipe-Format.md  06-Python-API.md  07-Data-Model.md  08-Temporal-Terminology.md  09-Workflows.md  10-Methodology-ACS-Aggregation.md  12-Methodology-Panel-Assembly.md  13-Bundle-Layout.md  14-Module-Reference.md  16-Appendix.md  HHP-Lab-Manual.md
background/: ACS_Population_Ingest_and_Crosscheck_Instructions.md  CoC-Lab-CLI-Test-Plan.md  CoC_Lab_Phase_2_Plan.md  README.md  coc_boundary_plan.md  coclab_build_aggregate_spec.md  coclab_manual_zori_text_patches.md  coclab_pep_county_spec.md  coclab_zori_spec.md  hhp_lab_rename_contract.md  msa_geography.md  recipe_extensibility.md
coclab/: __init__.py  analysis_geo.py  audit_panels.py  builds.py  curated_policy.py  naming.py  paths.py  provenance.py  raw_snapshot.py  source_registry.py  sources.py
devdocs/: acs1_sae_source_coverage_audit.md  acs5_tract_sae_distribution_audit.md  claims_audit_plan.md  coclab_build_aggregate_spec.md  directory-structure-v1.md  directory-structure.md  legacy_specs.md  metro-first-class-geometry-plan.md  metro_acs1_dual_product_plan.md  raw-data-retention-policy.md  recipe_containment_output_contract.md  recipe_schema_updates.md  sae_measure_contract_v1.md  sae_recipe_usage.md  temporal-terminology.md
hhplab/: __init__.py  _version.py  analysis_geo.py  audit_panels.py  curated_policy.py  naming.py  provenance.py  source_registry.py  sources.py  status.py
manual-obsidian/: 01-Overview.md  02-Installation.md  03-Architecture.md  04-CLI-Reference.md  05-Python-API.md  05-Recipe-Format.md  06-Data-Model.md  06-Python-API.md  07-Data-Model.md  07-Temporal-Terminology.md  08-Temporal-Terminology.md  08-Workflows.md  09-Workflows.md  10-Methodology-ACS-Aggregation.md  11-Methodology-Panel-Assembly.md  11-Methodology-ZORI-Aggregation.md  12-Bundle-Layout.md  12-Methodology-Panel-Assembly.md  13-Bundle-Layout.md  13-Module-Reference.md  14-Module-Reference.md  15-Development.md  16-Appendix.md  CoC-Lab-Manual.md  HHP-Lab-Manual.md
recipes/: california-cocs-counties-los-angeles-msa-map-2025.yaml  colorado-cocs-denver-msa-map-2025.yaml  filespec_test.yaml  florida-cocs-orlando-msa-map-2025.yaml  glynn_fox_metro_panel.yaml  glynn_fox_metro_panel_no_zori.yaml  glynn_fox_v1.yaml  glynn_fox_v2.yaml  kansas-missouri-cocs-counties-kansas-city-msa-map-2025.yaml  los-angeles-msa-cocs-pit-pep-density-2010-2024.yaml  metro25-glynnfox-acs1.yaml  metro25-glynnfox-laus.yaml  metro25-glynnfox.yaml  new-york-msa-cocs-pit-pep-density-2010-2024.yaml  new-york-new-jersey-cocs-counties-nyc-msa-map-2025.yaml  ohio-cocs-cleveland-msa-map-2024.yaml  (+5 more)
(+393 files in other folders)
