[project]
name = "coc-pit"
version = "0.1.0"
description = "CoC Lab - Continuum of Care boundary data infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "folium>=0.15",
    "typer>=0.12.0",
]

[project.scripts]
coclab = "coclab.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coclab"]
