[project]
name = "hhp-lab"
version = "0.1"
description = "HHP-Lab - homelessness and housing precarity data infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "folium>=0.15",
    "typer>=0.12.0",
    "openpyxl>=3.1.0",
    "pyxlsb>=1.0.10",
    "ipumspy>=0.5.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
hhplab = "hhplab.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# pytestmark must precede project imports; E402 is expected.
"tests/test_phase3_integration.py" = ["E402"]
"tests/test_conformance_integration.py" = ["E402"]
"tests/test_panel_assemble.py" = ["E402"]
"tests/test_panel_characterization.py" = ["E402"]
"tests/test_zori_panel_integration.py" = ["E402"]
"tests/test_panel_acs1.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "legacy_build_path: tests anchored to the legacy build_panel/save_panel/aggregate --build path",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hhplab"]
